--- a/package.json
+++ b/package.json
@@ -13,11 +13,18 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.18",
     "@mui/styled-engine-sc": "^6.0.0-alpha.6",
+    "@sanity/cli": "^3.21.3",
+    "@sanity/client": "^6.10.0",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.21.3",
+    "dotenv": "^16.3.1",
     "framer-motion": "^10.16.5",
     "next": "14.0.3",
+    "next-sanity": "^5.5.11",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "sanity": "^3.21.3",
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
