--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.14.18",
     "@mui/styled-engine-sc": "^6.0.0-alpha.6",
     "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.21.3",
     "framer-motion": "^10.16.16",
     "next": "14.0.3",
     "next-sanity": "^7.0.4",
