--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postbuild": "next-sitemap"
+    "lint": "next lint"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -19,13 +18,11 @@
     "framer-motion": "^10.16.16",
     "next": "14.0.3",
     "next-sanity": "^7.0.4",
-    "next-sitemap": "^4.2.3",
     "nodemailer": "^6.9.8",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.5.3",
-    "sharp": "^0.33.3",
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
