--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "adaptive_tech",
-  "version": "0.1.0",
+  "name": "assistivteq",
+  "version": "1.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -13,21 +13,27 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.18",
     "@mui/styled-engine-sc": "^6.0.0-alpha.6",
-    "@sanity/image-url": "^1.0.2",
-    "@sanity/vision": "^3.21.3",
+    "@sanity/icons": "^3.5.7",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^3.69.0",
     "framer-motion": "^10.16.16",
     "next": "14.0.3",
     "next-sanity": "^7.0.4",
     "nodemailer": "^6.9.8",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.5.1",
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.5.3",
-    "styled-components": "^6.1.1"
+    "react-share": "^5.1.2",
+    "sanity": "^3.69.0",
+    "styled-components": "^6.1.14"
   },
   "devDependencies": {
+    "@types/node": "22.10.5",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "5.7.3"
   }
 }
