--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.69.0",
     "framer-motion": "^10.16.16",
-    "next": "14.0.3",
+    "next": "^15.1.4",
     "next-sanity": "^7.0.4",
     "nodemailer": "^6.9.8",
     "react": "^18",
